grammar.js
    source_file: ($) =>
      choice(
        // Case 1: Document with a real header.
        //
        // The header MUST be the very first thing in the file
        // (no leading blank lines). After that, just normal blocks.
        prec(
          1,
          seq(
            field("header", $.document_header),
            repeat(choice($._blank_line, $._block_element)),
          ),
        ),

        // Case 2: Headerless document.
        //
        // Arbitrary mix of blank lines and blocks; any "header-looking"
        // lines here are treated as normal content (paragraphs/sections).
        repeat(choice($._blank_line, $._block_element)),
      ),

    _block_element: ($) =>
      choice(
        $.section,
        $.attribute_entry,
        $.description_list,
        $.callout_list,
        $.unordered_list,
        $.ordered_list,
        $.block_macro,
        $.block_admonition,
        $.inline_admonition,
        $.example_block,
        $.listing_block,
        $.fenced_code_block,
        $.block_quote,
        $.asciidoc_blockquote,
        $.literal_block,
        $.sidebar_block,
        $.passthrough_block,
        $.open_block,
        $.conditional_block,
        $.table_block,
        $.thematic_break,
        $.page_break,
        $.paragraph,
      ),

    document_header: ($) =>
      prec.right(
        choice(
          seq(
            field("title", $.document_title),
            field("author", $.author_line),
            field("revision", $.revision_line),
          ),
          seq(field("title", $.document_title), field("author", $.author_line)),
          seq(field("title", $.document_title), field("revision", $.revision_line)),
          field("title", $.document_title),
        ),
      ),

    document_title: ($) =>
      seq(
        field("marker", $.document_title_marker),
        field("text", $.document_title_text),
        $._line_ending,
      ),

    document_title_marker: ($) => token(prec(60, seq("=", /[ \t]+/))),

    document_title_text: ($) => token(prec(55, /[^\r\n]+/)),

    author_line: ($) =>
      seq(
        field("authors", $.author_list),
        optional(seq(optional($._whitespace), field("email", $.author_email))),
        $._line_ending,
      ),

    author_list: ($) =>
      seq(
        field("author", prec(5, $.author_name)),
        repeat(
          seq($._author_separator, optional($._whitespace), field("author", $.author_name)),
        ),
      ),

    _author_separator: ($) => $.plain_comma,

    author_name: ($) =>
      prec.right(
        seq(
          $.plain_text,
          repeat(choice($.plain_text, $.plain_dash, $.plain_dot, $._whitespace)),
        ),
      ),

    // INLINE “plain” email inside header
    author_email: ($) =>
      prec.right(
        seq(
          field("open", $.plain_less_than),
          field("address", alias($._author_email_address, $.plain_text)),
          field("close", $.plain_greater_than),
        ),
      ),

    _author_email_address: () => token.immediate(/[A-Za-z0-9._%+\-]+@[A-Za-z0-9.\-]+/),

    revision_line: ($) =>
      seq(
        field("version", $.revision_version),
        optional(
          seq(
            $.plain_comma,
            optional($._whitespace),
            field(
              "date",
              choice($.revision_date, alias($._revision_date_short, $.revision_date)),
            ),
          ),
        ),
        optional(
          seq($.plain_colon, optional($._whitespace), field("remark", $.revision_remark)),
        ),
        $._line_ending,
      ),

    revision_version: ($) => token(prec(1, seq(optional(token("v")), /[0-9]+(?:\.[0-9]+)*/))),

    revision_date: ($) => token(prec(20, /[0-9][0-9][0-9][0-9]-[0-9][0-9]?-[0-9][0-9]?/)),

    _revision_date_short: ($) =>
      token(prec(20, /[0-9][0-9]?-[0-9][0-9]?-[0-9][0-9][0-9][0-9]/)),

    revision_remark: ($) => token(prec(5, /[^\r\n]+/)),

    // SECTIONS - level-based hierarchy for proper sibling relationships
    section: ($) =>
      choice(
        $.section_level_2,
        $.section_level_3,
        $.section_level_4,
        $.section_level_5,
        $.section_level_6,
      ),

    section_level_2: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_2),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_3,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_3: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_3),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_4,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_4: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_4),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_5,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_5: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_5),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_6,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_6: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_6),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    title: ($) => token.immediate(/[^\r\n]+/),

    section_marker_2: ($) => token(prec(45, seq("==", /[ \t]+/))),
    section_marker_3: ($) => token(prec(40, seq("===", /[ \t]+/))),
    section_marker_4: ($) => token(prec(35, seq("====", /[ \t]+/))),
    section_marker_5: ($) => token(prec(30, seq("=====", /[ \t]+/))),
    section_marker_6: ($) => token(prec(25, seq("======", /[ \t]+/))),

    // ATTRIBUTE ENTRIES - Support both :name: and :name: value forms
    // Keep the delimiters explicit so highlight queries can capture the identifier directly.
    paragraph: ($) => prec.right(1, field("content", $._inline_text)),

    // INLINE FORMATTING
    _inline_text: ($) => prec.right(seq($.inline_seq_nonempty, repeat($.inline_seq_nonempty))),

    inline_seq_nonempty: ($) =>
      prec.right(seq($._inline_core_unit, repeat($._inline_core_unit))),

    _inline_core_unit: ($) =>
      choice(
        $.inline_macro,
        $.inline_element,
        $.escaped_char,
        $.punctuation,
        $.plain_text,
        $._whitespace,
      ),

    plain_text: ($) => prec.left(-50, $._plain_text_segment),
    _plain_text_segment: ($) => /[A-Za-z0-9$&@=]+/,
    _whitespace: ($) => token(/[ \t]+/),

    plain_colon: ($) => token(":"),
    plain_dash: ($) => token("-"),
    plain_less_than: () => token("<"),
    plain_greater_than: () => token(">"),
    plain_comma: ($) => token(","),
    plain_dot: ($) => $._plain_dot,
    _line_ending: ($) => token(prec(-2, /\r?\n/)),
    _blank_line: ($) => token(prec(-1, /[ \t]*\r?\n/)),
  },
});
