test/corpus/01_sections.txt
================================================================================
Section titles with different levels
================================================================================

== Level 1 Section
== Level 2 Section
=== Level 3 Section
==== Level 4 Section
===== Level 5 Section
====== Level 6 Section

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_2
      (section_marker_2)
      (title)))
  (section
    (section_level_2
      (section_marker_2)
      (title)
      (section_level_3
        (section_marker_3)
        (title)
        (section_level_4
          (section_marker_4)
          (title)
          (section_level_5
            (section_marker_5)
            (title)
            (section_level_6
              (section_marker_6)
              (title))))))))

================================================================================
Single section with title
================================================================================

== Document Title

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_2
      (section_marker_2)
      (title))))

================================================================================
Section titles with varied spacing
================================================================================

==  Title with two spaces
==   Title with three spaces
===	Title with tab

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_2
      (section_marker_2)
      (title)))
  (section
    (section_level_2
      (section_marker_2)
      (title)
      (section_level_3
        (section_marker_3)
        (title)))))
